--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.14.3"
   },
   "devDependencies": {
     "@types/node": "^20",
